--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -69,6 +69,8 @@ jobs:
             bash -exc '${{ env.py }} -m pip install virtualenv && ${{ env.py }} -m venv .env && \
             source .env/bin/activate && \
             yum install -y sudo && \
+            sudo yum install -y epel-release && \
+            sudo yum-config-manager --enable epel && \
             sudo yum install ninja-build -y && \
             python -m pip install cmake && \
             python -m pip install torch==1.8.1+cpu -f https://download.pytorch.org/whl/torch_stable.html && \
