--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -75,6 +75,6 @@ jobs:
             python -m pip install --upgrade pip && \
             python -m pip install cmake && \
             python -m pip install torch==1.8.1 -f https://download.pytorch.org/whl/torch_stable.html && \
-            sudo ln -s /usr/bin/ninja /usr/bin/ninja-build && \
+            #sudo ln -s /usr/bin/ninja /usr/bin/ninja-build && \
             python setup.py develop --user && \
             deactivate'
