--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -76,5 +76,5 @@ jobs:
             python -m pip install cmake && \
             python -m pip install torch==1.8.1 -f https://download.pytorch.org/whl/torch_stable.html && \
             #sudo ln -s /usr/bin/ninja /usr/bin/ninja-build && \
-            python setup.py develop --user && \
+            python setup.py develop && \
             deactivate'
